[tool.poetry]
name = "modular-mind-agent"
version = "0.1.0"
description = "A project for experimenting with modular agents based on LLMs. Multiple modules take care of different parts of the thought process, and interact between them."
authors = ["Miguel Blanco Marcos <miguel.blanco.marcos@gmail.com>"]
readme = "README.md"
packages = [{include = "modular_mind_agent"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
